obiekty/2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
  - image: nginx:1.21
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
