obiekty/4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summit
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - image: nginx:1.21
        name: nginx
        resources:
          limits:
            cpu: 512m
