obiekty/5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moj-serwis
spec:
  selector:
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
