obiekty/7-merged.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: summit
---
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
  - image: nginx:1.21
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summit
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - image: nginx:1.21
        name: nginx
        resources:
          limits:
            cpu: 512m
---
apiVersion: v1
kind: Service
metadata:
  name: moj-serwis
spec:
  selector:
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: moj-serwis
            port:
              number: 80
